--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,8 @@ path = "src/day03/part2.rs"
 name = "day05"
 path = "src/day05/main.rs"
 
+[[bin]]
+name = "day06"
+path = "src/day06/main.rs"
+
 [dependencies]
