--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,13 @@ path = "src/day05/main.rs"
 name = "day06"
 path = "src/day06/main.rs"
 
-[dependencies]
+[[bin]]
+name = "day07"
+path = "src/day07/main.rs"
+
+[dependencies.regex]
+version = "^1.4.2"
+
+[dependencies.nom]
+version = "^6"
+features = ["regexp"]
