--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,9 @@ path = "src/day06/main.rs"
 name = "day07"
 path = "src/day07/main.rs"
 
+[[bin]]
+name = "day08"
+path = "src/day08/main.rs"
+
 [dependencies.nom]
 version = "^6"
