--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,9 @@ path = "src/day07/main.rs"
 name = "day08"
 path = "src/day08/main.rs"
 
+[[bin]]
+name = "day09"
+path = "src/day09/main.rs"
+
 [dependencies.nom]
 version = "^6"
