--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,5 +32,9 @@ path = "src/day08/main.rs"
 name = "day09"
 path = "src/day09/main.rs"
 
+[[bin]]
+name = "day10"
+path = "src/day10/main.rs"
+
 [dependencies.nom]
 version = "^6"
