--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,5 +36,9 @@ path = "src/day09/main.rs"
 name = "day10"
 path = "src/day10/main.rs"
 
+[[bin]]
+name = "day11"
+path = "src/day11/main.rs"
+
 [dependencies.nom]
 version = "^6"
