--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,5 +48,9 @@ path = "src/day12/main.rs"
 name = "day13"
 path = "src/day13/main.rs"
 
+[[bin]]
+name = "day14"
+path = "src/day14/main.rs"
+
 [dependencies.nom]
 version = "^6"
