--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,5 +52,9 @@ path = "src/day13/main.rs"
 name = "day14"
 path = "src/day14/main.rs"
 
+[[bin]]
+name = "day15"
+path = "src/day15/main.rs"
+
 [dependencies.nom]
 version = "^6"
