--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,5 +60,9 @@ path = "src/day15/main.rs"
 name = "day16"
 path = "src/day16/main.rs"
 
+[[bin]]
+name = "day17"
+path = "src/day17/main.rs"
+
 [dependencies.nom]
 version = "^6"
