--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,5 +64,9 @@ path = "src/day16/main.rs"
 name = "day17"
 path = "src/day17/main.rs"
 
+[[bin]]
+name = "day18"
+path = "src/day18/main.rs"
+
 [dependencies.nom]
 version = "^6"
